--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -15,4 +15,13 @@ play.filters.hosts {
   allowed += "."
 }
 
+slick.dbs.default = {
+  db.url = "jdbc:postgresql://localhost/anewman?user=anewman&password=0851583"
+  db.url = ${?JDBC_DATABASE_URL}
+  db.driver = "org.postgresql.Driver"
+  profile = "slick.jdbc.PostgresProfile$"
+#  connectionPool = disabled
+#  keepAliveConnection = true
+}
+
 play.server.http.port = 9000
